# pandamonium

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  .zenodo.json  LICENSE  README.md  panda-get  panda-get-broken  panda-get-broken.py  panda-get-datasets.py  panda-kill-taskid  panda-resub-taskid  panda-shortname  pandamon  parse-panda.py  pyproject.toml  setup.cfg  setup.py
.github/workflows/: lint.yml  publish-package.yml
src/pandamonium/: __init__.py  panda-kill-taskid.py  panda-resub-taskid.py  panda-shortname.py  panda_kill_taskid.py  panda_resub_taskid.py  panda_shortname.py  pandamon.py  version.py
src/pandamonium/cli/: __init__.py  cli.py
tests/: test_pandamon.py
