[build-system]
# Minimum requirements for the build system to execute.
requires = ["wheel", "setuptools>=30.3.0", "attrs>=17.1", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 79
target-version = ['py36', 'py37', 'py38']
skip-string-normalization = true
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | .eggs
  | build
)/
'''

[tool.check-manifest]
ignore = [
    'tests/**',
    '.*',
    'pyproject.toml',
    'pytest.ini',
    'CODE_OF_CONDUCT.md',
]
