[metadata]
name = pandamonium
version = 0.0.1
description = Command line scripts to parse Panda web API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dguest/pandamonium
author = Dan Guest
author_email = daniel.hay.guest@cern.ch
license = BSD 3-Clause
license_file = LICENSE
keywords = hep utilities physics panda
project_urls =
    Documentation = https://dguest.github.io/pandamonium/
    Source = https://github.com/dguest/pandamonium
    Tracker = https://github.com/dguest/pandamonium/issues
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: BSD License
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Physics
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[bdist_wheel]
universal = 1

[options]
setup_requires =
    setuptools_scm>=1.15.0
    setuptools_scm_git_archive>=1.0
package_dir =
    = src
packages = find:
include_package_data = True
python_requires = >=2.7
install_requires =
    click>=6.0

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    pandamonium = pandamonium.cli:cli

[build_sphinx]
project = pandamonium
source-dir = docs
build-dir = docs/_build
all-files = 1
warning-is-error = 1
